--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -117,7 +117,7 @@
     line-height: 29px;
     background-color: white;
     border-radius: 4px;
-    box-shadow: 0px 0px 8px rgba(196, 196, 196, 0.5);
+    box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
     min-height: 240px;
     padding: 15px;
     text-align: center;
