--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,9 @@
 @import "home";
 @import "catalog";
 @import "product";
+@import "news";
+@import "news-item";
+@import "media";
 @import "slick";
 @import "vars";
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap');
@@ -72,7 +75,6 @@ textarea {
 
 .gradient-btn {
   cursor: pointer;
-  padding: 12px 0;
   text-align: center;
   color: #FFFFFF;
   text-transform: uppercase;
@@ -82,6 +84,14 @@ textarea {
   border-radius: 30px;
   background: linear-gradient(90deg, #0085E6 0%, #61C2EF 100%);
   transition: background .3s ease;
+  a {
+    color: #FFFFFF;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+  }
 
   &:hover {
     background: linear-gradient(90deg, #0085E6 0%, #2F3370 100%);
@@ -258,6 +268,11 @@ textarea {
     }
   }
 }
+.form-btn.gradient-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .contact-form {
   display: none;
@@ -266,7 +281,7 @@ textarea {
   position: absolute;
   max-width: 558px;
   background-color: #fff;
-  box-shadow: 0px 0px 8px rgba(196, 196, 196, 0.5);
+  box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
   border-radius: 4px;
   .form-btn {
     position: absolute;
