--- a/css/main.css
+++ b/css/main.css
@@ -87,10 +87,10 @@
 .catalog-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (1fr)[3];
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
+  -ms-grid-rows: 1fr 1fr 1fr;
   grid-gap: 32px; }
   .catalog-grid .card {
     font-size: 18px;
@@ -117,15 +117,15 @@
 .news-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 1fr 1fr 1fr;
   -ms-grid-rows: 1fr;
   grid-template-rows: 1fr;
   grid-gap: 32px; }
   .news-grid .card {
     background: #FFFFFF;
-    -webkit-box-shadow: 0px 0px 8px rgba(196, 196, 196, 0.5);
-    box-shadow: 0px 0px 8px rgba(196, 196, 196, 0.5);
+    -webkit-box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
+    box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
     border-radius: 4px;
     padding: 15px; }
     .news-grid .card p {
