--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -109,7 +109,9 @@
 .catalog-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
+  -ms-grid-rows: 1fr 1fr 1fr;
   grid-gap: 32px;
 
   .card {
@@ -145,12 +147,13 @@
 .news-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   grid-gap: 32px;
 
   .card {
     background: #FFFFFF;
-    box-shadow: 0px 0px 8px rgba(196, 196, 196, 0.5);
+    box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
     border-radius: 4px;
     padding: 15px;
 
