--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -29,6 +29,10 @@
 }
   .map-wrap {
     margin-top: 71px;
+    .container {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
 .contacts-col {
