--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -59,6 +59,10 @@
     text-align: center;
     margin: 93px 0 80px;
   }
+  img {
+    max-width: 100%;
+    margin: 0 auto;
+  }
 }
 .about-banner {
   background-repeat: no-repeat;
@@ -67,3 +71,8 @@
   background-size: cover;
 }
 
+.about-slider {
+  .slick-slide {
+    padding: 0 15px;
+  }
+}
