--- a/scss/_certificates.scss
+++ b/scss/_certificates.scss
@@ -8,7 +8,6 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   -ms-grid-columns: 1fr 1fr;
-  grid-template-rows: 3fr;
   grid-gap: 30px;
   .card {
     box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
@@ -17,6 +16,9 @@
     padding: 19px 15px 17px;
     display: flex;
     flex-direction: row;
+    img {
+      max-width: 234px;
+    }
   }
   p {
     color: $color-violet;
