--- a/scss/main.scss
+++ b/scss/main.scss
@@ -748,3 +748,25 @@ footer {
     text-decoration: underline;
   }
 }
+
+//------------- HOVER ARROWS----------
+.go-corner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  background-color: $color-light-blue;
+  border-radius: 0 4px 0 32px;
+}
+
+.go-arrow {
+  margin-top: -4px;
+  margin-right: -4px;
+  color: white;
+  font-family: courier, sans;
+}
