--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -116,6 +116,16 @@
       padding-top: 20px;
     }
   }
+  #sidebar {
+    position: fixed;
+    left: -120vw;
+    transition: .3s;
+    bottom: 0;
+    overflow-y: auto;
+    li.withDropMenu:hover > a:after {
+      display: none;
+    }
+  }
 }
 
 @media (max-width: 991.98px) {
@@ -152,6 +162,11 @@
     p {
       margin-left: 0;
       margin-top: 30px;
+    }
+  }
+  .catalog-item {
+    p {
+      display: none;
     }
   }
 }
@@ -211,7 +226,9 @@
 }
 
 @media (min-width: 768px) {
-
+  .catalog .filter-btn {
+    display: none;
+  }
 }
 
 @media (min-width: 992px) {
