--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -187,15 +187,25 @@
     }
   }
   .product {
+    h1 {
+      margin-bottom: 52px;
+    }
     .short-descr {
       font-size: 16px;
       line-height: 24px;
+      p {
+        margin-bottom: 49px;
+      }
+    }
+    .tab-content {
+      margin-top: 18px;
     }
   }
   .product-description {
     display: none;
   }
 }
+
 
 @media (max-width: 1199.98px) {
   .header-btm {
