--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -91,7 +91,7 @@
     }
   }
 }
-#productContent {
+.tab-content {
   margin-top: 34px;
   h3 {
     font-weight: $semibold;
@@ -201,3 +201,53 @@
     margin-top: 2px;
   }
 }
+
+.product .accordion {
+  &>.card {
+    border-radius: 0;
+    border: none;
+    .card-header {
+
+      border: none;
+      border-radius: 0;
+      border-bottom: 1px solid #ffffff;
+      margin-bottom: 0;
+      padding: 0;
+      .btn {
+        background: rgba(97, 194, 239, 0.5);;
+        font-weight: $semibold;
+        font-size: 14px;
+        line-height: 21px;
+        color: #000000;
+        letter-spacing: 0.4em;
+        text-transform: uppercase;
+        width: 100%;
+        height: 100%;
+        text-align: left;
+        padding: 15px;
+        border-radius: 0;
+        position: relative;
+        &:hover {
+          text-decoration: none;
+        }
+        &:focus {
+          box-shadow: none;
+        }
+        &[aria-expanded=true] {
+          background: $color-blue;
+          color: #FFFFFF;
+          &:after {
+            content: url(../media/shevron2_active.svg);
+          }
+        }
+        &:after {
+          content: url(../media/shevron.svg);
+          position: absolute;
+          top: 10px;
+          right: 20px;
+        }
+      }
+    }
+  }
+}
+
