--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -36,6 +36,9 @@
       margin: 0 0 23px;
     }
   }
+  .pagination {
+    position: static;
+  }
   main {
     padding-bottom: 64px;
   }
@@ -47,8 +50,10 @@
     .breadcrumb {
       margin-bottom: 43px;
     }
+
     .contact-form {
       padding: 39px 0 48px 0;
+
       .form-item {
         max-width: none;
       }
@@ -101,9 +106,11 @@
     h2 {
       margin-top: 40px;
     }
+
     .map-wrap {
       margin-top: 61px;
     }
+
     .personal-contacts {
       padding-top: 20px;
     }
@@ -114,6 +121,7 @@
     transition: .3s;
     bottom: 0;
     overflow-y: auto;
+
     li.withDropMenu:hover > a:after {
       display: none;
     }
@@ -121,20 +129,29 @@
   .home-news {
     background: linear-gradient(180deg, #61C2EF 0%, #FFFFFF 100%);
     padding-top: 56px;
+
     h1 {
       margin-bottom: 40px;
     }
+  }
+  .news,
+  .home-news {
     .news-flex {
       margin-left: 0;
     }
+
     .card-column {
       flex-direction: column;
     }
+
     .card,
     .card-sm {
       width: 100% !important;
       margin: 0 0 30px 0 !important;
     }
+  }
+  .news {
+    background: linear-gradient(89.24deg, #FFFFFF 3.49%, rgba(97, 194, 239, 0.4) 99.37%);
   }
 }
 
@@ -144,6 +161,7 @@
       font-size: 30px;
       line-height: 45px;
     }
+
     h2 {
       font-size: 20px;
       line-height: 30px;
@@ -190,19 +208,35 @@
     h1 {
       margin-bottom: 52px;
     }
+
     .short-descr {
       font-size: 16px;
       line-height: 24px;
+
       p {
         margin-bottom: 49px;
       }
     }
+
     .tab-content {
       margin-top: 18px;
     }
   }
   .product-description {
     display: none;
+  }
+  .news-item {
+    padding-bottom: 120px;
+    z-index: 2;
+    .gradient-btn {
+      margin-bottom: 55px;
+    }
+
+  }
+  .news-img {
+    img {
+      height: 224px;
+    }
   }
 }
 
@@ -256,13 +290,16 @@
     .card {
       width: calc(50% - 32px);
     }
+
     .card-column {
       width: 100%;
       display: flex;
       margin-left: 0;
+
       .card-sm {
         width: calc(50% - 32px);
         margin-left: 32px;
+
         &:first-child {
           margin-bottom: 0;
         }
@@ -292,6 +329,11 @@
   }
   .product-description-sm {
     display: none;
+  }
+  .news-item {
+    .gradient-btn {
+      margin-top: 65px;
+    }
   }
 }
 
