--- a/scss/_news-item.scss
+++ b/scss/_news-item.scss
@@ -1,5 +1,4 @@
 .news-item {
-  padding-bottom: 275px;
   position: relative;
   h1 {
     text-align: center;
@@ -90,7 +89,6 @@
 }
 
 .news-img {
-  max-height: 224px;
   .slick-slide {
     border: none;
     &:focus {
@@ -101,6 +99,7 @@
     max-width: 100%;
     padding: 0 15px;
     width: 100%;
+    height: 232px;
   }
   .slick-dots {
     list-style-type: none;
@@ -108,6 +107,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+    padding: 0;
     li {
       display: inline-block;
       margin: 0 10px;
